admission/validatingAdmissionPolicies/policies/serviceaccount-tokens/roles/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/warn: enabled
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-role-serviceaccount-tokens.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-serviceaccount-tokens.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    security.kolteq.com/audit: enabled
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-role-serviceaccount-tokens.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-serviceaccount-tokens.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    security.kolteq.com/enforce: enabled
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-role-serviceaccount-tokens.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-serviceaccount-tokens-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f421b021-cfd2-543e-b153-0f68a50f9668
  labels:
    check-role-serviceaccount-tokens.security.kolteq.com/enforce: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/audit: 'false - true'
    check-role-serviceaccount-tokens.security.kolteq.com/warn: 'false - true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-serviceaccount-tokens
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-serviceaccount-tokens.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
